@@ -42,6 +42,7 @@
 #define DEBUG_SUBSYSTEM S_CLASS
 
 #include <obd_support.h>
+#include <lprocfs_status.h>
 
 cfs_sysctl_table_header_t *obd_table_header = NULL;
 
@@ -60,6 +61,7 @@ enum {
         OBD_LDLM_TIMEOUT,       /* LDLM timeout for ASTs before client eviction */
         OBD_DUMP_ON_EVICTION,   /* dump kernel debug log upon eviction */
         OBD_DEBUG_PEER_ON_TIMEOUT, /* dump peer debug when RPC times out */
+        OBD_ALLOC_FAIL_RATE,    /* memory allocation random failure rate */
 };
 
 int LL_PROC_PROTO(proc_fail_loc)
@@ -179,6 +181,41 @@ int LL_PROC_PROTO(proc_pages_max)
         return 0;
 }
 
+#ifdef RANDOM_FAIL_ALLOC
+int LL_PROC_PROTO(proc_alloc_fail_rate)
+{
+#if LINUX_VERSION_CODE < KERNEL_VERSION(2,6,8)
+        loff_t *ppos = &filp->f_pos;
+#endif
+        int rc          = 0;
+
+        if (!table->data || !table->maxlen || !*lenp || (*ppos && !write)) {
+                *lenp = 0;
+                return 0;
+        }
+        if (write) {
+                rc = lprocfs_write_frac_helper(buffer, *lenp, 
+                                               (unsigned int*)table->data,
+                                               OBD_ALLOC_FAIL_MULT);
+        } else {
+                char buf[21];
+                int  len;
+
+                len = lprocfs_read_frac_helper(buf, 21,
+                                               *(unsigned int*)table->data,
+                                               OBD_ALLOC_FAIL_MULT);
+                if (len > *lenp)
+                        len = *lenp;
+                buf[len] = '\0';
+                if (copy_to_user(buffer, buf, len))
+                        return -EFAULT;
+                *lenp = len;
+        }
+        *ppos += *lenp;
+        return rc;
+}
+#endif
+
 static cfs_sysctl_table_t obd_table[] = {
         {
                 .ctl_name = OBD_FAIL_LOC,
@@ -268,6 +305,16 @@ static cfs_sysctl_table_t obd_table[] = {
                 .mode     = 0644,
                 .proc_handler = &proc_set_timeout
         },
+#ifdef RANDOM_FAIL_LOC
+        {
+                .ctl_name = OBD_ALLOC_FAIL_RATE,
+                .procname = "alloc_fail_rate",
+                .data     = &obd_alloc_fail_rate,
+                .maxlen   = sizeof(int),
+                .mode     = 0644,
+                .proc_handler = &proc_alloc_fail_rate
+        },
+#endif
         { 0 }
 };
 
